finsih up creation of msgs/chanls/srvrs endpoints
